# umpteen-vm

./: Cargo.toml  foo.um  foo.umasm
src/: asm.rs  instr.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs  vm.rs
um-asm/: Cargo.toml  foo.umasm
um-asm/src/: lib.rs  main.rs
um-vm/: Cargo.toml
um-vm/src/: main.rs
