[package]
name = "umpteen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
derive-getters = "0.5.0"
paste = "1.0.15"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
thiserror = "2.0.11"
